Add Demoblaze test automation suite with comprehensive documentation